Monitoring gatwway updated to provide new traffic info
